--- a/src/components/ProductList.css
+++ b/src/components/ProductList.css
@@ -1,35 +1,50 @@
-.product-list{
-    display: flex;
-    justify-content: center;
-    gap: 40px;
+.product-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
     margin-top: 20px;
-}
-
-.card{
-    width: 300px;
+    padding: 0 10px; /* Запобігає виходу за межі сайту */
+  }
+  
+  .card {
     border: 1px solid #3d3c3c;
-    padding: 5px;
-    border-radius: 10px;
-}
-
-.card-img{
-    width: 300px;
-    height: auto;
-    border-radius: 10px;
-}
-
-.list-btn{
-    margin: 0px auto;
     padding: 10px;
+    border-radius: 10px;
+    background-color: #fff;
+    transition: transform 0.3s;
+  }
+  
+  .card:hover {
+    transform: scale(1.05);
+  }
+  
+  .card-img {
+    width: 100%;
+    height: 200px; 
+    border-radius: 10px;
+    object-fit: cover; /* Зображення заповнює область без спотворення */
+  }
+  
+  
+  .list-btn {
+    margin: 0 auto;
+    padding: 10px 20px;
     color: white;
-    background-color:#3d3c3c;
+    background-color: #3d3c3c;
     border: none;
     border-radius: 20px;
-}
-
-.btn-wrap{
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  .list-btn:hover {
+    background-color: #555;
+  }
+  
+  .btn-wrap {
     width: 100%;
     display: flex;
     justify-content: center;
     padding-top: 40px;
-}
+  }
+  
